--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -7,7 +7,7 @@
               <div class="col-xl-3 col-lg-3">
                 <div class="logo">
                   <a href="/">
-                    <img src="img/logo.png" alt="" />
+                    <img src="img/logo.jpg" width="117" height="90" alt="" />
                   </a>
                 </div>
               </div>
