--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -13,11 +13,11 @@
                 <div class="mb-3 mt-4">
                     <label for="studentType" class="form-label">Are you a student of IMSciences?</label>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="studentType" value="yes" id="studentTypeYes" required>
+                        <input class="form-check-input" type="radio" name="studentType" value="yes" id="studentTypeYes">
                         <label class="form-check-label" for="studentTypeYes">Yes</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="studentType" value="no" id="studentTypeNo" required>
+                        <input class="form-check-input" type="radio" name="studentType" value="no" id="studentTypeNo">
                         <label class="form-check-label" for="studentTypeNo">No</label>
                     </div>
                 </div>
