Changed views, changes in server js, few more work

--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -16,18 +16,16 @@
                   <nav>
                     <ul id="navigation">
                       <li><a href="/">home</a></li>
-                      <li><a href="/performers">Performer</a></li>
-                      <li><a href="/about">about</a></li>
-                      <li><a href="/program">Program</a></li>
+                      <li><a href="#about">about</a></li>
+                      <li><a href="#program-Details">Program</a></li> <!-- Updated href attribute -->
                       <li><a href="/venue">Venue</a></li>
-                      <li><a href="/contact">Contact</a></li>
                     </ul>
                   </nav>
                 </div>
               </div>
-              <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+              <div class="col-xl-3 col-lg-3 d-lg-block">
                 <div class="buy_tkt">
-                  <div class="book_btn d-none d-lg-block">
+                  <div class="book_btn  d-lg-block">
                     <a href="/register">register</a>
                   </div>
                 </div>
