--- a/views/components/about.ejs
+++ b/views/components/about.ejs
@@ -1,73 +1,75 @@
-<div class="about_area black_bg">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8">
-          <div class="section_title text-center mb-80">
-            <h3
-              class="wow fadeInRight"
-              data-wow-duration="1s"
-              data-wow-delay=".3s"
-            >
-              About Program
-            </h3>
-            <p
-              class="wow fadeInRight"
-              data-wow-duration="1s"
-              data-wow-delay=".4s"
-            >
-              The event regularly attracts a diverse range of attendees from
-              around the world, across different professions, and with
-              different.
-            </p>
+<div id="about" class="about_area black_bg">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="section_title text-center mb-80">
+          <h3
+            class="wow fadeInRight"
+            data-wow-duration="1s"
+            data-wow-delay=".3s"
+          >
+            About Event
+          </h3>
+          <p
+            class="wow fadeInRight"
+            data-wow-duration="1s"
+            data-wow-delay=".4s"
+          >
+            The Olympiad, spanning three days, encompasses a rich tapestry of
+            events. From cultural showcases highlighting diverse traditions to a
+            Battle of the Bands promoting local music talent, it fosters both
+            artistic expression and competitive spirit. A Parliamentary Summit
+            delves into critical national issues, fostering negotiation and
+            diplomacy skills. The climax arrives on the final day with decisive
+            competitions followed by a formal dinner, where outstanding
+            performers are honored with awards and prizes, fueling further
+            motivation and excellence.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col-lg-7 col-md-6">
+        <div class="about_thumb">
+          <div
+            class="shap_3 wow fadeInLeft"
+            data-wow-duration="1s"
+            data-wow-delay=".4s"
+          >
+            <img src="img/shape/shape_3.svg" alt="" />
+          </div>
+          <div
+            class="thumb_inner wow fadeInUp"
+            data-wow-duration="1s"
+            data-wow-delay=".3s"
+          >
+            <img src="img/about/about.png" alt="" />
           </div>
         </div>
       </div>
-      <div class="row align-items-center">
-        <div class="col-lg-7 col-md-6">
-          <div class="about_thumb">
-            <div
-              class="shap_3 wow fadeInLeft"
-              data-wow-duration="1s"
-              data-wow-delay=".4s"
-            >
-              <img src="img/shape/shape_3.svg" alt="" />
-            </div>
-            <div
-              class="thumb_inner wow fadeInUp"
-              data-wow-duration="1s"
-              data-wow-delay=".3s"
-            >
-              <img src="img/about/about.png" alt="" />
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-5 col-md-6">
-          <div class="about_info pl-68">
-            <h4
-              class="wow fadeInLeft"
-              data-wow-duration="1s"
-              data-wow-delay=".5s"
-            >
-              It’s time to book your seat
-            </h4>
-            <p
-              class="wow fadeInLeft"
-              data-wow-duration="1s"
-              data-wow-delay=".6s"
-            >
-              The event regularly attracts a diverse range of attendees from
-              around the world, across different professions, and with
-              different levels of experience transform your business.
-            </p>
-            <a
-              href="/register"
-              class="boxed-btn3 wow fadeInLeft"
-              data-wow-duration="1s"
-              data-wow-delay=".7s"
-              >Buy Tickets</a
-            >
-          </div>
+      <div class="col-lg-5 col-md-6">
+        <div class="about_info pl-68">
+          <h4
+            class="wow fadeInLeft"
+            data-wow-duration="1s"
+            data-wow-delay=".5s"
+          >
+            Secure your spot now!
+          </h4>
+          <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">
+            Experience three days of dynamic events! From cultural exhibitions
+            to local music's ascent, Parliamentary debates on issues profound,
+            Culminating in honors and awards abound.
+          </p>
+          <a
+            href="/register"
+            class="boxed-btn3 wow fadeInLeft"
+            data-wow-duration="1s"
+            data-wow-delay=".7s"
+            >Buy Tickets</a
+          >
         </div>
       </div>
     </div>
   </div>
+</div>
