--- a/views/components/programDetails.ejs
+++ b/views/components/programDetails.ejs
@@ -1,5 +1,5 @@
  <!-- program details -->
- <div class="program_details_area detials_bg_1 overlay2">
+ <div id="program-Details" class="program_details_area detials_bg_1 overlay2">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -15,54 +15,44 @@
                         <div class="inner_wrap">
                             <div class="circle_img"></div>
                             <div class="porgram_top">
-                                <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">3.00-4.00pm</span>
-                                <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">12 Feb 2020</h4>
+                                <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">DAY 1 - (7th March, 2024):</span>
+                                <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">GAMES - 9:00AM to 5:00PM</h4>
                             </div>
                             <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <img src="img/program_details/1.png" alt="">
                             </div>
-                            <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Mr. Zosoldos</h4>
+                            <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">SHAB-E-RONAQ - 6:00PM to 9:30PM (Qawali Night, Food, Stalls etc.)</h4>
                         </div>
                     </div>
                     <div class="single_propram">
                         <div class="inner_wrap">
                             <div class="circle_img"></div>
                             <div class="porgram_top">
-                                <span class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">3.00-4.00pm</span>
-                                <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">12 Feb 2020</h4>
+                                <span class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">DAY 2 - (8th March, 2024):</span>
+                                <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">GAMES - 9:00AM to 5:00PM</h4>
                             </div>
                             <div class="thumb wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                                 <img src="img/program_details/2.png" alt="">
                             </div>
-                            <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s">Mr. Zosoldos</h4>
+                            <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s">RETRO/CULTURAL NIGHT - 6:00PM to 9:30PM
+                                (Open Mics, Performances, Skits etc)</h4>
                         </div>
                     </div>
                     <div class="single_propram">
                         <div class="inner_wrap">
                             <div class="circle_img"></div>
                             <div class="porgram_top">
-                                <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">3.00-4.00pm</span>
-                                <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">12 Feb 2020</h4>
+                                <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">DAY 3 - (9th March, 2024):</span>
+                                <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">GAMES - 9:00AM to 5:00PM</h4>
                             </div>
                             <div class="thumb  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <img src="img/program_details/3.png" alt="">
                             </div>
-                            <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Mr. Zosoldos</h4>
+                            <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">CLOSING CEREMONY & NETWORKING DINNER -
+                                6:30PM to 10:00PM</h4>
                         </div>
                     </div>
-                    <div class="single_propram">
-                        <div class="inner_wrap">
-                            <div class="circle_img"></div>
-                            <div class="porgram_top">
-                                <span class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">3.00-4.00pm</span>
-                                <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">12 Feb 2020</h4>
-                            </div>
-                            <div class="thumb wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
-                                <img src="img/program_details/4.png" alt="">
-                            </div>
-                            <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s">Mr. Zosoldos</h4>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
         </div>
