--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -34,7 +34,7 @@
                 <div class="mb-3">
                     <label for="studentImage" class="form-label">Upload Your Picture</label>
                     <input type="file" class="form-control" id="studentImage" name="studentImage"
-                        accept="image/png, image/jpeg" required />
+                        accept="image/png, image/jpeg" />
 
                     
 
@@ -47,13 +47,13 @@
                 <div class="mb-3">
                     <label for="FatherName" class="form-label">Father Name</label>
                     <input type="text" class="form-control" name="FatherName" id="FatherName"
-                        placeholder="Enter Father Name" required>
+                        placeholder="Enter Father Name" >
                 </div>
                 <div class="mb-3">
                     <label for="ContactNumber" class="form-label">Contact Number</label>
 
                     <input type="tel" inputmode="numeric" class="form-control" name="ContactNumber" id="ContactNumber"
-                        placeholder="Enter Contact Number" required>
+                        placeholder="Enter Contact Number" >
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
@@ -66,7 +66,7 @@
                 <div class="mb-3 mt-2" id="cnicImageDiv" style="display:none;">
                     <label for="cnicImage" class="form-label">Upload CNIC Picture</label>
                     <input type="file" class="form-control" id="cnicImage" name="cnicImage"
-                        accept="image/png, image/jpeg" required/>
+                        accept="image/png, image/jpeg"/>
                     
 
                 </div>
