--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -24,7 +24,7 @@
                 <div class="mb-3" id="studentIdInput" style="display: none;">
                     <label for="studentIdImage" class="form-label">Upload student ID card</label>
                     <input type="file" class="form-control" id="studentIdImage" name="studentIdImage"
-                        accept="image/png, image/jpeg" required />
+                        accept="image/png, image/jpeg" />
 
                     
 
