--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -24,7 +24,7 @@
                 <div class="mb-3" id="studentIdInput" style="display: none;">
                     <label for="studentIdImage" class="form-label">Upload student ID card</label>
                     <input type="file" class="form-control" id="studentIdImage" name="studentIdImage"
-                        accept="image/png, image/jpeg" required />
+                        accept="image/png, image/jpeg"  />
 
                     
 
@@ -42,7 +42,7 @@
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" class="form-control" name="name" id="name" placeholder="Enter Full Name"
-                        required>
+                        >
                 </div>
                 <div class="mb-3">
                     <label for="FatherName" class="form-label">Father Name</label>
@@ -57,11 +57,11 @@
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter Email" required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter Email" >
                 </div>
                 <div class="mb-3">
                     <label for="cnic" class="form-label">CNIC</label>
-                    <input type="number" class="form-control" name="cnic" id="cnic" placeholder="Enter CNIC" required>
+                    <input type="number" class="form-control" name="cnic" id="cnic" placeholder="Enter CNIC" >
                 </div>
                 <div class="mb-3 mt-2" id="cnicImageDiv" style="display:none;">
                     <label for="cnicImage" class="form-label">Upload CNIC Picture</label>
