Updated navbar and homepage

--- a/views/components/about.ejs
+++ b/views/components/about.ejs
@@ -1,4 +1,4 @@
-<div id="about" class="about_area black_bg">
+<div id="about" class="about_area black_bg pt-5">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
