--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1136,7 +1136,7 @@ h3 {
 
 /* line 100, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .buy_tkt .book_btn a {
-  background: #FF4533;
+  background: #3A090A;
   font-family: "Anton", sans-serif;
   padding: 12px 46px;
   font-size: 16px;
@@ -1158,8 +1158,8 @@ h3 {
 
 /* line 113, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .buy_tkt .book_btn a:hover {
-  border-color: #FF4533;
-  color: #FF4533;
+  border-color: #3A090A;
+  color: #3A090A;
   background: transparent;
 }
 
@@ -1250,7 +1250,7 @@ h3 {
 
 /* line 192, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu ul li a:hover {
-  color: #FF4533;
+  color: #3A090A;
 }
 
 /* line 196, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
@@ -1399,7 +1399,7 @@ h3 {
 
 /* line 291, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .header-top_area .social_media_links a:hover {
-  color: #FF4533;
+  color: #3A090A;
 }
 
 /* line 297, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
@@ -1444,7 +1444,7 @@ h3 {
 
 /* line 321, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .header-top_area .short_contact_list ul li a i {
-  color: #FF4533;
+  color: #3A090A;
   margin-right: 7px;
 }
 
@@ -1576,7 +1576,7 @@ h3 {
 .slider_area .single_slider .slider_text span {
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #3A090A;
   font-family: "Anton", sans-serif;
 }
 
@@ -2009,7 +2009,7 @@ h3 {
   font-family: "Anton", sans-serif;
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #3A090A;
 }
 
 /* line 54, ../../Arafath/CL/December/236. Event-02/HTML/scss/_about.scss */
@@ -2267,7 +2267,7 @@ h3 {
 
 /* line 37, ../../Arafath/CL/December/236. Event-02/HTML/scss/_performer.scss */
 .performar_area .single_performer .performer_heading span {
-  color: #FF4533;
+  color: #3A090A;
   font-weight: 400;
   font-size: 20px;
 }
@@ -2327,7 +2327,7 @@ h3 {
 .map_area .location_information h3 {
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #3A090A;
   margin-bottom: 20px;
 }
 
@@ -2525,7 +2525,7 @@ h3 {
 
 /* line 90, ../../Arafath/CL/December/236. Event-02/HTML/scss/_program_details.scss */
 .program_details_area .program_detail_wrap .single_propram .porgram_top span {
-  color: #FF4533;
+  color: #3A090A;
   font-size: 30px;
   font-family: "Anton", sans-serif;
   display: block;
@@ -2585,7 +2585,7 @@ h3 {
 .footer .footer_top .footer_widget h4 {
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #3A090A;
   margin-bottom: 24px;
 }
 
@@ -2625,7 +2625,7 @@ h3 {
 
 /* line 45, ../../Arafath/CL/December/236. Event-02/HTML/scss/_footer.scss */
 .footer .copy-right_text .copy_right a {
-  color: #FF4533;
+  color: #3A090A;
 }
 
 /*=================== contact banner start ====================*/
@@ -5833,4 +5833,38 @@ h6 {
   border:none;
   background: #E7E7E7;
 }
+.navbar-nav .nav-item .nav-link{
+  color: #fff;
+  font-size: 20px;
+  text-transform: capitalize;
+  font-weight: 400;
+  display: inline-block;
+  padding: 30px 0 30px  0;
+  font-family: "Anton", sans-serif;
+  position: relative;
+  text-transform: uppercase;
+}
+.navbar-nav .nav-item {
+  margin: 0 18px;
+}
+@media (max-width: 768px) {
+  .navbar-collapse {
+    background-color: white;
+    color: #000000;
+  }
+  .navbar-nav .nav-item .nav-link{
+    color: #000000
+  }
+}
+.mobile_register_button a{
+  background: #3A090A;
+  font-family: "Anton", sans-serif;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 400;
+  border: 1px solid transparent;
+  color: #fff;
+  text-transform: capitalize;
+}
+
 /*# sourceMappingURL=style.css.map */
