--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -3,37 +3,58 @@
       <div id="sticky-header" class="main-header-area">
         <div class="container">
           <div class="header_bottom_border">
-            <div class="row align-items-center">
-              <div class="col-xl-3 col-lg-3">
-                <div class="logo">
-                  <a href="/">
-                    <img src="img/logo.png" width="117" height="90" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-xl-6 col-lg-6">
-                <div class="main-menu d-none d-lg-block">
-                  <nav>
-                    <ul id="navigation">
-                      <li><a href="/">home</a></li>
-                      <li><a href="#about">about</a></li>
-                      <li><a href="#program-Details">Program</a></li> <!-- Updated href attribute -->
-                      <li><a href="/venue">Venue</a></li>
-                    </ul>
-                  </nav>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 d-lg-block">
-                <div class="buy_tkt">
-                  <div class="book_btn  d-lg-block">
-                    <a href="/register">register</a>
+            <nav class="navbar navbar-expand-lg navbar-light">
+              <div class="container-fluid">
+                <!-- Logo on the left -->
+                <a class="navbar-brand" href="/">
+                  <img src="img/logo.png" width="120" height="100" alt="" />
+                </a>
+            
+                <!-- Toggler button -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <!-- Centered menu -->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#program-Details">Event</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/venue">Venue</a>
+                    </li>
+            
+                    <!-- Register button on mobile -->
+                    <li class="nav-item d-lg-none">
+                      
+                        <div class="mobile_register_button">
+                          <a href="/register" class="nav-link">Register</a>
+                        </div>
+                      
+                    </li>
+                  </ul>
+            
+                  <!-- Register button on desktop -->
+                  <div class="navbar-nav ml-auto d-none d-lg-flex">
+                    <div class="buy_tkt">
+                      <div class="book_btn">
+                        <a href="/register" class="nav-link">Register</a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-12">
-                <div class="mobile_menu d-block d-lg-none"></div>
-              </div>
-            </div>
+            </nav>
+            
+            
+            
           </div>
         </div>
       </div>
