--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <form class="RegisterForm" id="registrationForm" action="/register/new-registration" method="post"
+    <form class="RegisterForm pb-5" id="registrationForm" action="/register/new-registration" method="post"
         enctype="multipart/form-data">
 
         <div class="row">
@@ -431,4 +431,41 @@
         </div>
     </div>
 
+
+ 
 </div>
+
+   <!-- footer_start  -->
+   <footer class="footer">
+    
+    <div class="copy-right_text pt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <p
+              class="copy_right text-center wow fadeInDown"
+              data-wow-duration="1s"
+              data-wow-delay=".5s"
+            >
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Copyright IM Olympiad &copy;
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              All rights reserved
+            </p>
+
+            <p
+            class="copy_right mt-1 text-center wow fadeInDown"
+            data-wow-duration="1s"
+            data-wow-delay=".5s"
+          >
+          Proudly Developed by: IM Olympiad IT Team
+        </p>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- footer_end  -->
