--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,63 +1,56 @@
 <header>
-    <div class="header-area">
-      <div id="sticky-header" class="main-header-area">
-        <div class="container">
-          <div class="header_bottom_border">
-            <nav class="navbar navbar-expand-lg navbar-light">
-              <div class="container-fluid">
-                <!-- Logo on the left -->
-                <a class="navbar-brand" href="/">
-                  <img src="img/logo.png" width="120" height="100" alt="" />
-                </a>
-            
-                <!-- Toggler button -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-            
-                <!-- Centered menu -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#program-Details">Event</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/venue">Venue</a>
-                    </li>
-            
-                    <!-- Register button on mobile -->
-                    <li class="nav-item d-lg-none">
-                      
-                        <div class="mobile_register_button">
-                          <a href="/register" class="nav-link">Register</a>
-                        </div>
-                      
-                    </li>
-                  </ul>
-            
-                  <!-- Register button on desktop -->
-                  <div class="navbar-nav ml-auto d-none d-lg-flex">
-                    <div class="buy_tkt">
-                      <div class="book_btn">
-                        <a href="/register" class="nav-link">Register</a>
-                      </div>
-                    </div>
+  <div class="header-area">
+    <div id="sticky-header" class="main-header-area">
+      <div class="container">
+        <div class="header_bottom_border">
+
+
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <!-- Logo on the left -->
+              <a class="navbar-brand" href="/">
+                <img src="img/logo.png" width="110" height="90" alt="" />
+              </a>
+          
+              <!-- Toggler button -->
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="menu-icon"><i class="bi bi-list"></i></span>
+              </button>
+          
+              <!-- Centered menu -->
+              <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#program-Details">Event</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/venue">Venue</a>
+                  </li>
+                </ul>
+              </div>
+          
+              <!-- Register button on desktop -->
+              <div class="navbar-nav ml-auto d-none d-lg-flex">
+                <div class="buy_tkt">
+                  <div class="book_btn">
+                    <a href="/register" class="nav-link">Register</a>
                   </div>
                 </div>
               </div>
-            </nav>
-            
-            
-            
-          </div>
+            </div>
+          </nav>
+          
+
+
         </div>
       </div>
     </div>
-  </header>
-  <!-- header-end -->
+  </div>
+</header>
+<!-- header-end -->
