--- a/views/venue.ejs
+++ b/views/venue.ejs
@@ -65,7 +65,7 @@
     <!-- brand_area_end  -->
     
     <!-- footer_start  -->
-    <%- include('./components/header.ejs') %>
+    <%- include('./components/footer.ejs') %>
 
     <!-- footer_end  -->
 
