--- a/views/components/sponsor.ejs
+++ b/views/components/sponsor.ejs
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-<div class="brand_area black_bg">
+<div style="background: black;" class="brand_area">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -25,19 +24,7 @@
                 <img src="img/brand/2.png" alt="" />
               </div>
               <div class="single_brand text-center">
-                <img src="img/brand/3.png" alt="" />
-              </div>
-              <div class="single_brand text-center">
-                <img src="img/brand/4.png" alt="" />
-              </div>
-              <div class="single_brand text-center">
-                <img src="img/brand/5.png" alt="" />
-              </div>
-              <div class="single_brand text-center">
-                <img src="img/brand/1.png" alt="" />
-              </div>
-              <div class="single_brand text-center">
-                <img src="img/brand/2.png" alt="" />
+                <img src="img/brand/3.png" alt=""  />
               </div>
             </div>
           </div>
@@ -45,3 +32,4 @@
       </div>
     </div>
   </div>
+
