--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flaticon/3.3.0/font/flaticon.css" />
     <link rel="stylesheet" href="css/slicknav.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+
     
 
 
@@ -57,7 +59,7 @@
                   <img src="img/shape/shape_2.svg" alt="" />
                 </div>
                 <span
-                  class="wow fadeInLeft"
+                  class="wow fadeInLeft text-white"
                   data-wow-duration="1s"
                   data-wow-delay=".3s"
                   >7th March, 2024</span
@@ -78,10 +80,11 @@
                 </p>
 
                 <div class="d-flex justify-content-center">
-                  <button class="wow fadeInLeft btn btn-lg home_register_button d-lg-none d-xl-none" data-wow-duration="1s" data-wow-delay=".5s">
-                    Register
-                  </button>
-                </div>
+                  <a href="/register" class="wow fadeInLeft btn btn-lg home_register_button d-lg-none d-xl-none" data-wow-duration="1s" data-wow-delay=".5s">
+                      Register
+                  </a>
+              </div>
+              
 
               </div>
             </div>
@@ -106,6 +109,7 @@
     <%- include('./components/footer.ejs') %>
 
     <!-- JS here -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/3.5.0/modernizr.min.js"></script>
@@ -113,7 +117,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
