--- a/views/components/sponsor.ejs
+++ b/views/components/sponsor.ejs
@@ -17,13 +17,13 @@
         <div class="col-lg-12">
           <div class="brand_wrap">
             <div class="brand_active owl-carousel">
-              <div class="single_brand text-center">
+              <div class="single_brand mb-5 text-center">
                 <img src="img/brand/1.png" alt="" />
               </div>
-              <div class="single_brand text-center">
+              <div class="single_brand mb-5 text-center">
                 <img src="img/brand/2.png" alt="" />
               </div>
-              <div class="single_brand text-center">
+              <div class="single_brand mb-5 text-center">
                 <img src="img/brand/3.png" alt=""  />
               </div>
             </div>
